updates in imports

--- a/modules/esmodules/index.html
+++ b/modules/esmodules/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>My modules</title>
 </head>
 <body>
   <h1>Hello modules!</h1>
+  <script type="module" src="./main.js"></script>
+  <script type="module" src="./shipping.js"></script>
 </body>
 </html>
